# autonomous-rccar

CSCI4511W/FinalProject/doc/: design.drawio
CSCI4511W/FinalProject/src/AI/: Architecture.py  DataProcessor.py  Makefile  Readme.md  Trainer.py  utils.py
CSCI4511W/FinalProject/src/ROS/: Makefile
CSCI4511W/FinalProject/src/Utils/: merge_data_set.py
CSCI4511W/Homework/HW2/: part1.py  part1_output.txt  part2.py  part2_output.txt
CSCI5551-Robotic/: .gitmodules
CSCI5551-Robotic/FinalProject/: .gitignore  README.md
CSCI5551-Robotic/FinalProject/AndroidAppController/UARTControllerTesting/: settings.gradle
CSCI5551-Robotic/FinalProject/Gazebo/: Makefile  Readme.md
CSCI5551-Robotic/FinalProject/Gazebo/Car/: Readme.md
CSCI5551-Robotic/FinalProject/Gazebo/Car/CarModel/: model.config  (+1 more)
CSCI5551-Robotic/FinalProject/Gazebo/Plugins/: Readme.md
CSCI5551-Robotic/FinalProject/Gazebo/Plugins/RCcar/: CMakeLists.txt  rc_forward_push.cc  rc_key_stroke_listen.cc  rc_rear_wheel_rolling.cc  rc_teleop_camera.cc
CSCI5551-Robotic/FinalProject/Modeling/FreeCAD/: test.FCStd
CSCI5551-Robotic/FinalProject/Modeling/RCcarParts/: LWheelConnector.stl
CSCI5551-Robotic/FinalProject/TestingSteeringServo/SweepMaxLeftMaxRight/: SweepMaxLeftMaxRight.ino
CSCI5551-Robotic/FinalProject/TestingThrottlingMotor/ThrotllingUpAndDown/: ThrotllingUpAndDown.ino
CSCI5551-Robotic/FinalProject/Utils/: cvImgColorFilter.py
CSCI5551-Robotic/FinalProject/Visual/: ProjectExplain
CSCI5551-Robotic/Homework/HW3/hw3_provided_code/: README.txt  teleoperation.cpp  teleoperation.py  test_node_standin.py
(+70 files in other folders)
